cabal-version: 2.4
name:          mqtt-ordering
version:       0.1.0.0

-- The license under which the package is released.
author:        Kamek
maintainer:    b.kamek@gmail.com

executable mqtt-ordering
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  ghc-options:        -threaded
  default-extensions:
    BangPatterns
    NumericUnderscores
    OverloadedStrings
    TypeApplications

  build-depends:
    , attoparsec   ==0.13.2.5
    , base         ^>=4.14.3.0
    , binary
    , bytestring
    , net-mqtt
    , network-uri

  hs-source-dirs:     app
  default-language:   Haskell2010
